# bit-concurrency

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  Readme.md
doc/: CMakeLists.txt
include/bit/concurrency/locks/: null_mutex.hpp  semaphore.hpp  shared_mutex.hpp  spin_lock.hpp  spinning_semaphore.hpp  waitable_event.hpp
include/bit/concurrency/locks/detail/: null_mutex.inl  semaphore.inl  spinning_semaphore.inl  waitable_event.inl
include/bit/concurrency/utilities/: unlock_guard.hpp
include/bit/concurrency/utilities/detail/: unlock_guard.inl
src/bit/concurrency/locks/: spin_lock.cpp
src/bit/concurrency/locks/mac/: semaphore.cpp
src/bit/concurrency/locks/posix/: semaphore.cpp
src/bit/concurrency/locks/win32/: semaphore.cpp
test/: CMakeLists.txt
